--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter_circular_chart: "^0.0.3"
   sliver_fab: "^0.1.0"
   flutter_webview_plugin: "^0.1.6"
-
+  duration: "^1.0.0"
 
 
   # The following adds the Cupertino Icons font to your application.
