--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,10 @@ dependencies:
   cached_network_image: "^0.4.1+1"
   qr_flutter: ^1.1.1
 #  flutter_fab_dialer: "^0.0.5"
-  flutter_circular_chart: "^0.0.3"
+  flutter_circular_chart: "^0.1.0"
   sliver_fab: "^0.1.0"
-  flutter_webview_plugin: "^0.1.6"
-  duration: "^1.0.0"
+  flutter_webview_plugin: "0.2.1+2"
+  duration: "^2.0.0"
 
 
   # The following adds the Cupertino Icons font to your application.
