--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ dependencies:
     sdk: flutter
   cloud_firestore: ^0.8.1
   firebase_auth: "^0.5.20"
-  flutter_firebase_ui: "^0.0.9"
+  flutter_firebase_ui: "^0.0.11"
   firebase_messaging: ^1.0.2
   cached_network_image: "^0.4.1+1"
   qr_flutter: ^1.1.1
@@ -41,7 +41,7 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   assets:
-    - assets/images/ndm_logo.png
+    - assets/images/ndm_logo.jpg
     - assets/images/order_card.jpg
     - assets/images/google_signin_button.png
     - assets/images/empty-cart.png
